# server/docs/swagger.json
@@ -66,7 +66,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/handlers.PayBill.PayBillInput"
                         }
                     }
                 ],
@@ -516,7 +516,7 @@
             "type": "object",
             "properties": {
                 "amountToPay": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "date": {
                     "type": "string"
@@ -577,6 +577,20 @@
                 }
             }
         },
+        "handlers.PayBill.PayBillInput": {
+            "type": "object",
+            "properties": {
+                "paidOn": {
+                    "type": "string"
+                },
+                "payee": {
+                    "type": "string"
+                },
+                "payer": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.UpdateUser.UpdateUserInput": {
             "type": "object",
             "properties": {
@@ -592,7 +606,7 @@
             "type": "object",
             "properties": {
                 "amount": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "date": {
                     "type": "string"
